--- a/index.html
+++ b/index.html
@@ -23,11 +23,13 @@
             </div>
             <div class="tip">
                 <strong>Select Tip %</strong>
+              <div>
                 <button>5%</button>
                 <button>10%</button>
                 <button>15%</button>
                 <button>25%</button>
                 <button>50%</button>
+              </div>
               <input type="number " id="custom-tip" placeholder="Custom">
          </div>
            <div class="people">
