--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
              Tip amount <br><span>/ person</span>
          </p>
  
-         <strong>$4.27</strong>
+         <strong>$0.00</strong>
      </div>
  
       <div class="total">
@@ -56,10 +56,10 @@
              Total <br><span>/ person</span>
          </p>
  
-         <strong>$32.79</strong>
+         <strong>$0.00</strong>
       </div>
  </div>
-  <button>Reset</button>
+ <button onclick="reset()">Reset</button>
  </section>
      </main>
  </body>
